--- a/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
+++ b/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
@@ -139,8 +139,14 @@
           </property>
           <property name="icon">
            <iconset resource="../../../../../../debug-iVSPlan/Slicer/Libs/MRML/Widgets/Resources/qMRMLWidgets.qrc">
-            <normaloff>:/Icons/VisibleOn.png</normaloff>
-            <normalon>:/Icons/VisibleOff.png</normalon>:/Icons/VisibleOn.png</iconset>
+            <normaloff>:/Icons/VisibleOff.png</normaloff>
+            <normalon>:/Icons/VisibleOn.png</normalon>:/Icons/VisibleOff.png</iconset>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -159,7 +165,7 @@
       <item row="2" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <widget class="QSlider" name="horizontalSlider">
+         <widget class="QSlider" name="timeSlider">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -176,8 +182,23 @@
         </item>
         <item>
          <widget class="QLabel" name="timeValueLabel">
+          <property name="minimumSize">
+           <size>
+            <width>45</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>45</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="text">
-           <string>-</string>
+           <string>0</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
@@ -268,6 +289,9 @@
            <iconset resource="../qSlicerCameraPathModule.qrc">
             <normaloff>:/Icons/Player/Play.png</normaloff>
             <normalon>:/Icons/Player/Pause.png</normalon>:/Icons/Player/Play.png</iconset>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -614,7 +638,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="computeCameraPathpushButton">
+       <widget class="QPushButton" name="computeCameraPathPushButton">
         <property name="enabled">
          <bool>true</bool>
         </property>
@@ -751,7 +775,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>42</height>
+       <height>200</height>
       </size>
      </property>
     </spacer>
