--- a/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
+++ b/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>467</width>
-    <height>693</height>
+    <height>694</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -457,7 +457,7 @@
         <item>
          <widget class="QPushButton" name="deleteSelectedPushButton">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -492,7 +492,7 @@
         <item>
          <widget class="QPushButton" name="goToKeyFramePushButton">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -524,7 +524,7 @@
         <item>
          <widget class="QPushButton" name="updateKeyFramePushButton">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -640,7 +640,7 @@
       <item>
        <widget class="QPushButton" name="computeCameraPathPushButton">
         <property name="enabled">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="toolTip">
          <string>Recomputes the camera path from the key frames list.</string>
@@ -661,11 +661,14 @@
    </item>
    <item>
     <widget class="ctkCollapsibleButton" name="SelectedKeyFrameCollapsibleButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text" stdset="0">
       <string>Selected Key Frame</string>
      </property>
      <property name="collapsed" stdset="0">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
