--- a/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
+++ b/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
@@ -113,6 +113,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="cameraPathVisibilityPushButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
@@ -132,7 +135,7 @@
            </size>
           </property>
           <property name="toolTip">
-           <string>Toggle the camera path visibility.</string>
+           <string>Toggle the camera path visibility. Requires at least two keyframes.</string>
           </property>
           <property name="text">
            <string/>
@@ -146,7 +149,7 @@
            <bool>true</bool>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
