--- a/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
+++ b/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
@@ -62,10 +62,10 @@
          </stringlist>
         </property>
         <property name="baseName" stdset="0">
-         <string>F</string>
+         <string>Camera</string>
         </property>
         <property name="addEnabled" stdset="0">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="renameEnabled" stdset="0">
          <bool>true</bool>
@@ -101,7 +101,7 @@
            </stringlist>
           </property>
           <property name="baseName" stdset="0">
-           <string>F</string>
+           <string>CameraPath</string>
           </property>
           <property name="addEnabled" stdset="0">
            <bool>true</bool>
