BUG: Use icons in current module directory
I was using Icons that exist in Slicer directory and was
accessing them using the qrc in Slicer sources. This was
an issue since Slicer sources are located in the superbuild
directory and therefore were dependent on my system path.

I added the icons into the module. In the future, if the
module is integrated within Slicer, we could remove them
and use the Slicer core ones.

--- a/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
+++ b/Modules/Loadable/CameraPath/Resources/UI/qSlicerCameraPathModuleWidget.ui
@@ -141,7 +141,7 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../debug-iVSPlan/Slicer/Libs/MRML/Widgets/Resources/qMRMLWidgets.qrc">
+           <iconset resource="../qSlicerCameraPathModule.qrc">
             <normaloff>:/Icons/VisibleOff.png</normaloff>
             <normalon>:/Icons/VisibleOn.png</normalon>:/Icons/VisibleOff.png</iconset>
           </property>
@@ -996,7 +996,6 @@
  </customwidgets>
  <resources>
   <include location="../qSlicerCameraPathModule.qrc"/>
-  <include location="../../../../../../debug-iVSPlan/Slicer/Libs/MRML/Widgets/Resources/qMRMLWidgets.qrc"/>
  </resources>
  <connections>
   <connection>
